favicon and manifest

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon"> 
   <title>Memory Game</title>
+  <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="css/normalize.css" data-norem inline> <!-- Not parsed by rem.js -->
   <link rel="stylesheet" href="css/style.css" inline>
 </head>
