--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon"> 
   <title>Memory Game</title>
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/memory-game/manifest.json">
   <link rel="stylesheet" href="css/normalize.css" data-norem inline> <!-- Not parsed by rem.js -->
   <link rel="stylesheet" href="css/style.css" inline>
 </head>
